--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.7.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "sendgrid": "^4.7.1",
     "serve-favicon": "~2.3.0",
     "superagent": "^2.3.0"
   },
