--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "morgan": "~1.7.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "sendgrid": "^4.7.1",
     "serve-favicon": "~2.3.0",
-    "superagent": "^2.3.0"
+    "superagent": "^2.3.0",
+    "thunk": "0.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
