--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^15.3.2",
     "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "sendgrid": "^4.7.1",
