--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "activist",
   "version": "0.0.0",
+  "engines": {
+    "node": "6.9.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -34,7 +37,10 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "gulp": "^3.9.1",
+    "mocha": "^3.2.0",
     "webpack": "^1.13.3"
   }
 }
