--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --recursive"
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
@@ -39,6 +40,12 @@
     "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "eslint": "^3.11.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-react": "^6.8.0",
     "gulp": "^3.9.1",
     "mocha": "^3.2.0",
     "webpack": "^1.13.3"
