--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
   web:
     build: .
     image: activist-app
-    environment:
-      - MONGODB_URI=mongodb://mongo:27017
-    env_file: .env
+    env_file: web-variables.env
     links:
       - mongo
     ports:
       - "3000:3000"
+    volumes:
+      - .:/usr/src/app
