--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha --recursive"
+    "test": "mocha --recursive",
+    "build": "webpack"
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
@@ -16,8 +17,8 @@
     "client-sessions": "^0.7.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
-    "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "express-stormpath": "^3.1.8",
     "hjs": "~0.0.6",
     "mongoose": "^4.6.7",
     "morgan": "~1.7.0",
